--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <h1>Srini here!</h1>
     </div>
 
+    <!--     
     <script
       crossorigin
       src="https://unpkg.com/react@18/umd/react.development.js"
@@ -19,9 +20,9 @@
     <script
       crossorigin
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-    ></script>
+    ></script> -->
 
-    <script src="./App.js"></script>
+    <script type="module" src="./App.js"></script>
 
     <!-- <script>
       const heading = document.createElement("h1");
